# ai-mcp-multi-agent

./: .env.example  .gitignore  GITHUB_SETUP.md  INSTALL_DUCKDUCKGO.md  PROJECT_SUMMARY.md  README.md  client.py  interactive_client.py  main.py  mathserver.py  pyproject.toml  requirements.txt  search_server.py  weather.py
plans/: improvement-plan.md
tests/: __init__.py  test_math_server.py  test_weather_server.py
